# homelab

bare-metal/: .gitignore  Makefile  docker-compose.yml  justfile  machines.yaml
bare-metal/arm64-flash/: Dockerfile  start.sh
bare-metal/butane/: Dockerfile  start.sh
bare-metal/config-builder/: Cargo.toml  Dockerfile
bare-metal/config-builder/src/: main.rs
bare-metal/coreos-builder/: Dockerfile  start.sh
bare-metal/machines/: .gitignore
bare-metal/machines/configs/: agent.bu  server.bu
bare-metal/machines/configs/network-provisioner/: network-provisioner.bu  post-install.sh  pre-install.sh
coreos-provisioner/: dnsmasq.conf  docker-compose.yaml
