[package]
name = "config-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subst = { version="0.2.2", features=["yaml"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.1.13", features = ["derive"] }
envfile = "0.2.1"
